# vllm

./: install_nixl_latest.sh  pyproject.toml  setup.py
requirements/: build.txt
tests/v1/kv_connector/nixl_integration/: toy_proxy_server.py
vllm/: envs.py  outputs.py
vllm/config/: __init__.py  parallel.py
vllm/distributed/kv_transfer/kv_connector/v1/: base.py  nixl_connector.py  rust_connector.py
vllm/distributed/kv_transfer/kv_connector/v1/nixl_connector/: __init__.py  handshake.py
vllm/distributed/kv_transfer/kv_connector/v1/rust_connector/: Cargo.toml  PLAN.md  PROGRESS.md  README.md  justfile  pyproject.toml  run_tests.sh  test_side_channel_e2e.py
vllm/distributed/kv_transfer/kv_connector/v1/rust_connector/examples/: side_channel_demo.rs
vllm/distributed/kv_transfer/kv_connector/v1/rust_connector/src/: lib.rs  scheduler.rs  worker.rs
vllm/distributed/kv_transfer/kv_connector/v1/rust_connector/src/side_channel/: error.rs  mod.rs  tcp.rs
vllm/distributed/kv_transfer/kv_connector/v1/rust_connector/tests/: side_channel_integration.rs
vllm/engine/: protocol.py
vllm/entrypoints/: kv_handshake.py  nixl_side_channel_server.py  ssl.py
vllm/entrypoints/openai/: api_server.py  protocol.py  serving_chat.py  serving_completion.py  serving_engine.py
vllm/transformers_utils/tokenizers/: __init__.py
vllm/transformers_utils/tokenizers/native_tokenizer_ext/: Cargo.toml  test_encode.py
vllm/transformers_utils/tokenizers/native_tokenizer_ext/src/: lib.rs
vllm/utils/: __init__.py
vllm/v1/: request.py  utils.py
vllm/v1/core/sched/: scheduler.py
vllm/v1/engine/: __init__.py  core.py  core_client.py  utils.py
vllm/v1/executor/: abstract.py
vllm/v1/worker/: gpu_model_runner.py  gpu_worker.py
