[package]
name = "native-tokenizer-ext"
version = "0.1.0"
edition = "2024"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "native_tokenizer_ext"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
libc = "0.2"
env_logger = "0.11"
pyo3 = { version = "0.24.2", features = ["abi3", "abi3-py39", "py-clone"] }
numpy = "0.24"
ndarray = "0.16"
itertools = "0.12"

tokenizers-python = { path = "../../../../../tokenizers/bindings/python" }
tokenizers = { path = "../../../../../tokenizers/tokenizers" }

[dev-dependencies]
pyo3 = { version = "0.24.2", features = ["auto-initialize"] }

[features]
default = ["pyo3/extension-module"]