[package]
name = "vllm-kv-connector-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "vllm_nixl"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.22"
numpy = "0.22"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"

# NIXL Rust bindings
nixl-sys = { path = "/home/wseaton/vllm/nixl_installer_latest/nixl-0.6.1/src/bindings/rust", optional = true }

[features]
default = []
# enable NIXL support (requires nixl-sys dependency)
nixl = ["dep:nixl-sys"]
# enable extension-module for Python builds (not needed for tests)
extension-module = ["pyo3/extension-module"]

[profile.release]
lto = true
codegen-units = 1
